🏩❣️ Checkpoint ./public/client.js:47973311/479 ./views/index.html:47973311/122

--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
         </label>
         
         <button type="submit" id="submit-dream">Add Dream</button>
+        <button type="remove" id="remove-dream">Remove Dream</button>
       </form>
 
       <section class="dreams">
