🍂🕰 Checkpoint ./public/client.js:47973311/779 ./views/index.html:47973311/222

--- a/views/index.html
+++ b/views/index.html
@@ -34,8 +34,9 @@
         </label>
         
         <button type="submit" id="submit-dream">Add Dream</button>
-        <button type="remove" id="remove-dream">Remove Dream</button>
       </form>
+      
+      <div><button type="remove" id="remove-dream">Remove Dream</button></div>
 
       <section class="dreams">
         <ul id="dreams"></ul>
