🔑🏂 Checkpoint ./public/client.js:47973311/344 ./views/index.html:47973311/564

--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,14 @@
       </form>
       
       <div><button type="remove" id="remove-dream">Remove Dream</button></div>
+      <form>
+        <label>
+          Modify Dream
+          <input name="dreamModify" type="text" maxlength="100" required placeholder="Change Dream">
+        </label>
+        <button type="modify" id="modify-dream">Change Dream</button>
+      </form>
+      <div></div>
 
       <section class="dreams">
         <ul id="dreams"></ul>
