--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/style.css">
 
     <!-- import the webpage's client-side javascript file -->
-    <script src="/client.js" defer></script>
+    <script src="/loginclient.js" defer></script>
   </head>
   <body>
     <header>
